...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_leave"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
...

    <Button
        android:id="@+id/btnApplyLeave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
...

                    <ImageView
                        android:id="@+id/imageViewAnnual"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
...

                    <TextView
                        android:id="@+id/textViewAnnual"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textViewAnnualBalance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textViewDays"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <ImageView
                        android:id="@+id/imageViewMedical"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
...

                    <TextView
                        android:id="@+id/textViewMedical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textViewMedicalBalance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textViewMedicalDays"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <ImageView
                        android:id="@+id/imageViewFamily"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
...

                    <TextView
                        android:id="@+id/textViewFamily"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textViewFamilyBalances"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textViewFamilyDays"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                    <ImageView
                        android:id="@+id/imageViewBirthday"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
...

                    <TextView
                        android:id="@+id/textViewBirthday"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textViewBirthdayBalance"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

                        <TextView
                            android:id="@+id/textViewBirthdayDays"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
...

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...

    <TableLayout
        android:id="@+id/tableLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
...
